Update name display to Japanese for Lancelot

--- a/Lancelot/index.html
+++ b/Lancelot/index.html
@@ -172,7 +172,7 @@ html, body{
   <div class="ui">
     <div class="ui-scale" id="uiScale">
       <img class="window-img" id="windowImg" src="./parts-sf4d7619aab.jpg" alt="">
-      <div class="name" id="nameLayer">Lancelot</div>
+      <div class="name" id="nameLayer">ランスロット</div>
       <div class="text" id="textLayer"></div>
       <div class="hint" id="hint">
         <img src="./next.png" alt="next">
