Update index.html with birthday messages
Add birthday messages and sentiments for Mio.

--- a/Lancelot/index.html
+++ b/Lancelot/index.html
@@ -188,6 +188,7 @@ html, body{
 <script>
 /* ===== 固定セリフ ===== */
 const messages = `
+
 ……あ、ミオ。
 ちょうど探してたんだ。
 ---
@@ -218,12 +219,32 @@ const messages = `
 のんびり過ごすだけでもいい。
 ミオが笑ってくれるなら、それが一番だ。
 ---
+……ああ、そうだ。これ
+も渡しておきたくて。
+---
+見た目が、なんとなく
+俺を思い出す色だろ？
+---
+店で見かけた時、妙に目について……
+気づいたら手に取ってた。
+---
+誕生日当日には
+間に合わなかったけど、
+今日こうして渡せてよかった。
+---
+忙しい時にでも、
+少しずつ食べてくれたら嬉しい。
+---
 ……改めて。
 生まれてきてくれてありがとう。
 出会ってくれてありがとう。
 ---
+今年の誕生日も、その先の時間も……
+出来る限り、俺の隣にいてくれ。
+---
 さあ、行こうか。
 今日は、ミオのための日だ。
+
 `;
 
 const lines = messages
