--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ html, body{
   -webkit-tap-highlight-color:transparent;
 }
 
+/* ===== ステージ ===== */
 #stage{
   position:fixed;
   inset:0;
@@ -29,16 +30,33 @@ html, body{
   background:#000;
 }
 
-/* ===== scene ===== */
+
+/* ===== ヘッダー（追加） ===== */
+#header{
+  position:fixed;
+  left:0; right:0; top:0;
+  z-index:10;
+  pointer-events:none;
+  transform: translateY(0);
+}
+#header img{
+  width:100%;
+  height:auto;
+  display:block;
+}
+
+/* ヘッダー下を背景に被せる量（追加） */
+:root{ --headerOverlap: 60px; }
+
+/* ===== 背景＋立ち絵の表示領域（ウインドウ分を引く） ===== */
 #scene{
   position:absolute;
-  left:0;
-  right:0;
-  top:0;
-  height:calc(100vh - var(--uiH, 0px));
+  left:0; right:0; top:calc(-1 * var(--headerOverlap, 60px));
+  height:calc(100vh - var(--uiH, 0px) + var(--headerOverlap, 60px));
   overflow:hidden;
 }
 
+/* 背景：切らない／下揃え（元のまま） */
 .bg{
   position:absolute;
   inset:0;
@@ -46,9 +64,10 @@ html, body{
   background-position:bottom center;
   background-repeat:no-repeat;
   background-color:#000;
-  transform:scale(1.05);
+  transform: scale(1.1);
 }
 
+/* 立ち絵：背景と同じ下基準（元のまま） */
 .chara{
   position:absolute;
   left:50%;
@@ -56,23 +75,13 @@ html, body{
   transform:translateX(-50%);
   max-width:100%;
   max-height:100%;
+  width:auto;
+  height:auto;
   object-fit:contain;
   pointer-events:none;
 }
 
-/* ===== header ===== */
-#header{
-  position:absolute;
-  left:0; right:0; top:0;
-  z-index:5;
-  pointer-events:none;
-}
-#header img{
-  width:100%;
-  display:block;
-}
-
-/* ===== UI ===== */
+/* ===== メッセージウインドウ（既存・不変更） ===== */
 .ui{
   position:fixed;
   left:0; right:0; bottom:0;
@@ -88,9 +97,10 @@ html, body{
 .window-img{
   display:block;
   width:100%;
+  height:auto;
 }
 
-/* text params */
+/* 文字（サイズだけ調整） */
 :root{
   --nameLeft: 38px;
   --nameTop: -4px;
@@ -104,19 +114,20 @@ html, body{
   --hintRight: 28px;
   --hintBottom: 20px;
 }
-
 .name{
   position:absolute;
   left:var(--nameLeft);
   top:var(--nameTop);
   right:60px;
   font-size:var(--nameSize);
+  letter-spacing:var(--textLetter);
   color:rgba(255,255,255,.92);
   text-shadow:0 2px 6px rgba(0,0,0,.65);
   white-space:nowrap;
   overflow:hidden;
+  text-overflow:ellipsis;
+  z-index:2;
 }
-
 .text{
   position:absolute;
   left:var(--textLeft);
@@ -129,80 +140,141 @@ html, body{
   text-shadow:0 2px 6px rgba(0,0,0,.68);
   white-space:pre-wrap;
   min-height:3.2em;
+  z-index:2;
 }
-
 .hint{
   position:absolute;
   right:var(--hintRight);
   bottom:var(--hintBottom);
+  font-size:18px;
+  opacity:.9;
+  text-shadow:0 2px 6px rgba(0,0,0,.75);
   display:none;
   animation:blink 1.2s infinite ease-in-out;
+  z-index:2;
 }
-.hint img{
-  width:80px;
-}
+
+
 
 @keyframes blink{
-  0%,100%{opacity:.25}
-  50%{opacity:1}
+  0%,100%{opacity:.25; transform:translateY(0)}
+  50%{opacity:1; transform:translateY(-2px)}
 }
 
+/* タップ */
 .tap{
   position:fixed;
   inset:0;
   z-index:20;
 }
 
-/* ===== editor ===== */
+/* ===== 編集UI（既存・最小追加） ===== */
 #editor{
   position:fixed;
-  left:10px; right:10px; top:10px;
+  left:10px;
+  right:10px;
+  top:10px;
   z-index:30;
   background:rgba(0,0,0,.72);
+  border:1px solid rgba(255,255,255,.12);
   border-radius:12px;
   padding:10px;
+  backdrop-filter:blur(8px);
+  box-shadow:0 10px 24px rgba(0,0,0,.35);
 }
 .row{ display:flex; gap:8px; flex-wrap:wrap; }
 .row > *{ flex:1 1 160px; }
-
-label{ font-size:12px; }
-
-input, textarea, button{
+label{
+  font-size:12px;
+  color:rgba(255,255,255,.78);
+  display:block;
+  margin-bottom:4px;
+}
+input[type="file"], input[type="text"], textarea, button{
   width:100%;
+  box-sizing:border-box;
   border-radius:10px;
   border:1px solid rgba(255,255,255,.14);
   background:rgba(255,255,255,.08);
-  color:#fff;
+  color:rgba(255,255,255,.92);
   padding:10px;
   font-size:14px;
+  outline:none;
 }
-textarea{ min-height:92px; resize:vertical; }
+textarea{
+  min-height:92px;
+  resize:vertical;
+  user-select:text;
+}
+button{
+  background:rgba(255,255,255,.12);
+  font-weight:600;
+}
+.smallNote{
+  font-size:11px;
+  color:rgba(255,255,255,.68);
+  margin-top:6px;
+  line-height:1.35;
+}
 
+/* ✎ボタン */
 #miniBtn{
   position:fixed;
-  right:10px; top:10px;
+  right:10px;
+  top:10px;
   z-index:25;
-  width:44px; height:44px;
+  width:44px;
+  height:44px;
   border-radius:12px;
+  border:1px solid rgba(255,255,255,.16);
+  background:rgba(0,0,0,.55);
+  color:rgba(255,255,255,.9);
   display:none;
+  backdrop-filter:blur(8px);
 }
+
+/* 追加：補助テキスト */
+.miniLabel{
+  margin-top:6px;
+  opacity:.85;
+}
+
+/* FINAL FIX: next / hint icon (single source of truth) */
+.hint img{
+  width:80px;
+  height:auto;
+  display:block;
+  margin-top:-8px;
+}
+
+/* === DIFFS START === */
+/* ヘッダーと背景の隙間解消 */
+#scene{
+  top:0;
+  height:calc(100vh - var(--uiH, 0px));
+}
+/* ウインドウ位置を1行分下げ */
+:root{ --textTop: 96px; }
+/* フォント選択UIを非表示（機能は残す） */
+#fontFile{ display:none; }
+/* === DIFFS END === */
 </style>
 </head>
 
 <body>
 <div id="stage">
+  <div id="header"><img id="headerImg" src="./header.png" alt=""></div>
   <div id="scene">
-    <div id="header"><img src="./header.png"></div>
     <div class="bg" id="bg"></div>
-    <img class="chara" id="chara">
+    <img class="chara" id="chara" alt="">
   </div>
 
   <div class="ui">
     <div class="ui-scale" id="uiScale">
-      <img class="window-img" id="windowImg" src="./parts-sf4d7619aab.jpg">
+      <img class="window-img" id="windowImg" src="./parts-sf4d7619aab.jpg" alt="">
       <div class="name" id="nameLayer"></div>
       <div class="text" id="textLayer"></div>
-      <div class="hint" id="hint"><img src="./next.png"></div>
+      <div class="hint" id="hint"><img id="nextImg" src="./next.png" alt="next"></div>
     </div>
   </div>
 
@@ -212,101 +284,220 @@ textarea{ min-height:92px; resize:vertical; }
 <div id="editor">
   <div class="row">
     <div>
-      <label>背景</label>
-      <input type="file" id="bgFile">
+      <label>背景画像（700*688）</label>
+      <input type="file" id="bgFile" accept="image/*">
+      <label class="miniLabel">背景ファイル名</label>
+      <select id="bgPath"></select>
     </div>
     <div>
-      <label>立ち絵</label>
-      <input type="file" id="charaFile">
+      <label>立ち絵（640*688）</label>
+      <input type="file" id="charaFile" accept="image/*">
+      <label class="miniLabel">立ち絵ファイル名</label>
+      <select id="charaPath"></select>
     </div>
   </div>
 
-  <label>キャラ名</label>
-  <input type="text" id="nameInput" value="ジークフリート">
+  <div class="row">
+    <div>
+      <label>キャラ名</label>
+      <input type="text" id="nameInput" value="ジークフリート">
+    </div>
+    <div>
+      <label>フォント選択</label>
+      <input type="file" id="fontFile" accept=".otf,.ttf,application/font-sfnt,font/otf,font/ttf">
+    </div>
+  </div>
 
-  <label>メッセージ（--- 区切り / [名前|画像]）</label>
+  <label>メッセージ（--- で区切り / [名前|画像]）</label>
   <textarea id="msgInput"></textarea>
 
-  <button id="playBtn">再生</button>
+  <div class="row">
+    <button id="playBtn">再生</button>
+  </div>
+
+  <div class="smallNote">
+    画面タップ：途中は全文表示／全文後は次へ。最後まで行くと最初に戻ります。
+  </div>
 </div>
 
-<button id="miniBtn">✎</button>
+<button id="miniBtn" title="編集">✎</button>
 
 <script>
-const bg = document.getElementById("bg");
-const chara = document.getElementById("chara");
-const nameLayer = document.getElementById("nameLayer");
-const textLayer = document.getElementById("textLayer");
-const hint = document.getElementById("hint");
-const tap = document.getElementById("tap");
+const elBg = document.getElementById("bg");
+const elChara = document.getElementById("chara");
+const elName = document.getElementById("nameLayer");
+const elText = document.getElementById("textLayer");
+const elHint = document.getElementById("hint");
+const elUiScale = document.getElementById("uiScale");
+const windowImg = document.getElementById("windowImg");
+
 const editor = document.getElementById("editor");
 const miniBtn = document.getElementById("miniBtn");
 
-let lines=[], idx=0, timer=null, full="", cursor=0, typing=false;
-let baseName="", baseCharaSrc="";
+const bgFile = document.getElementById("bgFile");
+const charaFile = document.getElementById("charaFile");
+const fontFile = document.getElementById("fontFile");
+const nameInput = document.getElementById("nameInput");
+const msgInput = document.getElementById("msgInput");
+const playBtn = document.getElementById("playBtn");
+const tap = document.getElementById("tap");
 
-function parse(raw){
-  return raw.split(/\n---\n/).map(s=>s.trim()).filter(Boolean);
+const bgPath = document.getElementById("bgPath");
+const charaPath = document.getElementById("charaPath");
+
+let lines = [], idx = 0, timer = null, full = "", cursor = 0, typing = false;
+let baseName = "", baseChara = "";
+
+/* 追加：2キャラ対応パーサ */
+function parseLineEx(line){
+  const m = line.match(/^\\[(.+?)\\|(.+?)\\]\\s*(.*)$/);
+  if(m){ return {name:m[1], img:m[2], text:m[3]}; }
+  return {name:baseName, img:baseChara, text:line};
 }
 
-function parseLine(line){
-  const m = line.match(/^\[(.+?)\|(.+?)\]\s*(.*)$/);
-  if(m){
-    return { name:m[1], img:m[2], text:m[3] };
-  }
-  return { name:baseName, img:baseCharaSrc, text:line };
+function readAsDataURL(file){
+  return new Promise((resolve, reject) => {
+    const fr = new FileReader();
+    fr.onload = () => resolve(fr.result);
+    fr.onerror = reject;
+    fr.readAsDataURL(file);
+  });
 }
 
+function parseMessages(raw){
+  const parts = raw
+    .split(/\\n---\\n|^---\\n|\\n---$|^---$/m)
+    .map(s => s.replace(/\\r/g,"").trim())
+    .filter(Boolean);
+  return parts.length ? parts : [""];
+}
+
+async function applyPickedFont(){
+  if(!fontFile.files || !fontFile.files[0]) return;
+  const file = fontFile.files[0];
+  const url = URL.createObjectURL(file);
+  try{
+    const ff = new FontFace("NewCinemaAStdD", `url(${url})`);
+    await ff.load();
+    document.fonts.add(ff);
+  }catch(e){}
+}
+
+/* UIスケール＆UI高さを更新（--uiH を入れる） */
+function updateUILayout(){
+  const baseW = windowImg.naturalWidth || 640;
+  document.documentElement.style.setProperty("--uiBaseW", String(baseW));
+  const s = window.innerWidth / baseW;
+  elUiScale.style.setProperty("--uiScale", String(s));
+  const rect = elUiScale.getBoundingClientRect();
+  document.documentElement.style.setProperty("--uiH", rect.height + "px");
+}
+windowImg.addEventListener("load", updateUILayout);
+addEventListener("resize", updateUILayout);
+
+function stopTyping(){ if(timer){ clearInterval(timer); timer=null; } }
+function finishTyping(){
+  stopTyping();
+  elText.textContent = full;
+  typing = false;
+  elHint.style.display = "block";
+}
 function showLine(i){
-  if(timer) clearInterval(timer);
-  idx=i;
-  const d=parseLine(lines[idx]);
-  nameLayer.textContent=d.name;
+  stopTyping();
+  idx = Math.max(0, Math.min(i, lines.length - 1));
+  const d = parseLineEx(lines[idx] || "");
+  elName.textContent = d.name || " ";
   if(d.img){
-    chara.src="./chara/"+d.img;
-    chara.style.display="block";
+    elChara.src = `./chara/${encodeURIComponent(d.img)}`;
+    elChara.style.display = "block";
   }
-  full=d.text;
-  cursor=0;
-  textLayer.textContent="";
-  typing=true;
-  hint.style.display="none";
-  timer=setInterval(()=>{
+  full = d.text || "";
+  cursor = 0;
+  elText.textContent = "";
+  typing = true;
+  elHint.style.display = "none";
+  timer = setInterval(() => {
     cursor++;
-    textLayer.textContent=full.slice(0,cursor);
-    if(cursor>=full.length){
-      clearInterval(timer);
-      typing=false;
-      hint.style.display="block";
-    }
-  },30);
+    elText.textContent = full.slice(0, cursor);
+    if(cursor >= full.length) finishTyping();
+  }, 30);
 }
-
 function next(){
-  if(typing){
-    textLayer.textContent=full;
-    typing=false;
-    hint.style.display="block";
-    return;
-  }
-  idx=(idx+1)%lines.length;
+  if(typing){ finishTyping(); return; }
+  idx++; if(idx >= lines.length) idx = 0;
   showLine(idx);
 }
 
-document.getElementById("playBtn").onclick=()=>{
-  baseName=document.getElementById("nameInput").value.trim();
-  lines=parse(document.getElementById("msgInput").value);
-  editor.style.display="none";
-  miniBtn.style.display="block";
-  showLine(0);
-};
+function safeName(s){
+  return (s || "").trim().replace(/^\\.\\/+/, "").replace(/^\\/+/, "");
+}
 
-tap.onclick=next;
-miniBtn.onclick=()=>{
-  editor.style.display="block";
-  miniBtn.style.display="none";
-  hint.style.display="none";
-};
+playBtn.addEventListener("click", async () => {
+  await applyPickedFont();
+
+  /* 背景：読み込み優先 → フォルダ指定 */
+  if(bgFile.files && bgFile.files[0]){
+    const u = await readAsDataURL(bgFile.files[0]);
+    elBg.style.backgroundImage = `url(\"${u}\")`;
+  }else{
+    const nm = safeName(bgPath.value);
+    if(nm){
+      elBg.style.backgroundImage = `url(\"./bg/${encodeURIComponent(nm)}\")`;
+    }else{
+      elBg.style.backgroundImage = \"none\";
+    }
+  }
+
+  /* 立ち絵：読み込み優先 → フォルダ指定 */
+  if(charaFile.files && charaFile.files[0]){
+    const u = await readAsDataURL(charaFile.files[0]);
+    elChara.src = u;
+    elChara.style.display = \"block\";
+  }else{
+    const nm = safeName(charaPath.value);
+    if(nm){
+      elChara.src = `./chara/${encodeURIComponent(nm)}`;
+      elChara.style.display = \"block\";
+    }else{
+      elChara.removeAttribute(\"src\");
+      elChara.style.display = \"none\";
+    }
+  }
+
+  baseName = (nameInput.value || \"\").trim();
+  baseChara = safeName(charaPath.value || \"\");
+  lines = parseMessages(msgInput.value || \"\");
+  idx = 0;
+
+  editor.style.display = \"none\";
+  miniBtn.style.display = \"block\";
+  updateUILayout();
+  showLine(0);
+});
+
+tap.addEventListener(\"click\", () => {
+  if(editor.style.display !== \"none\") return;
+  next();
+});
+miniBtn.addEventListener(\"click\", () => {
+  stopTyping();
+  editor.style.display = \"block\";
+  miniBtn.style.display = \"none\";
+  elHint.style.display = \"none\";
+});
+
+// === auto fill selects from list.json ===
+async function __loadList(p){
+  try{ const r=await fetch(p,{cache:\"no-store\"}); return r.ok?await r.json():[] }catch(e){ return [] }
+}
+function __fill(sel, arr){
+  sel.innerHTML = '<option value=\"\">（なし）</option>';
+  arr.forEach(n=>{ const o=document.createElement('option'); o.value=n; o.textContent=n; sel.appendChild(o); });
+}
+(async()=>{
+  if (window.bgPath) __fill(bgPath, await __loadList('./bg/list.json'));
+  if (window.charaPath) __fill(charaPath, await __loadList('./chara/list.json'));
+})();
 </script>
 </body>
 </html>
