--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ button{
     
   </div>
 
-  <label>メッセージ（--- で区切り）</label>
+  <label>メッセージ（--- で区切り、[キャラ名|立ち絵ファイル名]で個別設定可）</label>
   <textarea id="msgInput">誕生日、おめでとう。
 ---
 あれからもう1年経ったということか、
@@ -325,7 +325,7 @@ button{
   </div>
 
   <div class="smallNote">
-    画面タップ：途中は全文表示／全文後は次へ。最後まで行くと最初に戻ります。</br）>
+  </br）>
   </div>
 </div>
 
