--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ input[type="file"], input[type="text"], textarea, button{
   outline:none;
 }
 textarea{
-  min-height:92px;
+  min-height:180px;
   resize:vertical;
   user-select:text;
 }
@@ -306,8 +306,9 @@ button{
     
   </div>
 
-  <label>メッセージ（--- で区切り）[キャラ名|立ち絵ファイル名]で個別設定可</label>
-  <textarea id="msgInput">誕生日、おめでとう。
+  <label>メッセージ</br>（--- で区切り）[キャラ名|立ち絵ファイル名]で個別設定可</label>
+  <textarea id="msgInput">
+誕生日、おめでとう。
 ---
 あれからもう1年経ったということか、
 ふっ、月日の流れとは早いものだな。
