--- a/index.html
+++ b/index.html
@@ -303,7 +303,11 @@ button{
       <label>キャラ名</label>
       <input type="text" id="nameInput" value="ジークフリート">
     </div>
-    
+
+    <div>
+      <label>&nbsp;</label>
+      <button id="insertTagBtn">＋ 記法を挿入</button>
+    </div>
   </div>
 
   <label>メッセージ</br>（--- で区切り）[キャラ名|立ち絵ファイル名]で個別設定可</label>
@@ -317,9 +321,7 @@ button{
 さぷらいず、というものを考えて
 来たのだが、受け取ってくれるか？</textarea>
 
-  <div class="row">
-    <button id="insertTagBtn">＋ 記法を挿入</button>
-  </div>
+  
 
   <div class="row">
     <button id="playBtn">再生</button>
